updated localization & keys.

--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Wed Feb 12 15:40:22 CET 2014
+#Mon May 19 15:37:42 CEST 2014
 SystemConfigPanel.assignmentPolicyEnforcement=Assignment policy enforcement
 SystemConfigPanel.cleanupPolicy=Cleanup Policy
 SystemConfigPanel.cleanupPolicy.auditRecords=Audit records cleanup interval
@@ -12,6 +12,7 @@ SystemConfigPanel.mail.port=Port
 SystemConfigPanel.mail.transportSecurity=Transport security
 SystemConfigPanel.mail.username=Username
 SystemConfigPanel.notification.redirectToFile=Redirect to file
+SystemConfigPanel.notification.redirectToFile.placeholder=Filename
 SystemConfigPanel.title.accountSynchronization=Global account synchronization settings
 SystemConfigPanel.title.basic=Basic
 SystemConfigPanel.title.connectorFramework=Connector frameworks configuration
