--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReport_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/PageReport_sk_SK.utf8.properties
@@ -1,6 +1,2 @@
-#Wed Feb 12 15:40:22 CET 2014
-pageReport.message.editWarning=For report editing, please use XML tab. Editing via forms will be available soon.
-pageReport.message.emptyXml=Can't save empty XML as report.
-pageReport.tab.aceEditor=Xml
-pageReport.tab.panelConfig=Basic configuration
-pageReport.title=Report configuration
+#Mon May 19 15:37:42 CEST 2014
+page.title=Report configuration
