--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Mon May 12 18:18:48 CEST 2014
+#Mon May 19 15:37:41 CEST 2014
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -205,8 +205,10 @@ operation.com.evolveum.midpoint.model.api.ModelService.modifyObject=Modify objec
 operation.com.evolveum.midpoint.model.api.ModelService.modifyObjectWithExclusion=Modify object with exclusion
 operation.com.evolveum.midpoint.model.api.ModelService.postInit=Post initialization (Model)
 operation.com.evolveum.midpoint.model.api.ModelService.testResource=Test Resource (Model)
+operation.com.evolveum.midpoint.model.common.mapping.Mapping.evaluate=Mapping evaluate (Model)
 operation.com.evolveum.midpoint.model.controller.ModelController.modifyObjectWithExclusion=Modify object with exclusion
 operation.com.evolveum.midpoint.model.controller.ModelController.processAddDeleteAccountFromChanges=Process account from changes
+operation.com.evolveum.midpoint.model.controller.ModelController.searchObjects=Search objects (Model)
 operation.com.evolveum.midpoint.model.controller.ModelController.searchObjectsInProvisioning=Search objects in provisioning
 operation.com.evolveum.midpoint.model.controller.ModelController.searchObjectsInRepository=Search objects in repository
 operation.com.evolveum.midpoint.model.controller.ModelControllerImpl.createAccount=Create account
@@ -240,6 +242,7 @@ operation.com.evolveum.midpoint.model.lens.projector.ContextLoader.checkProjecti
 operation.com.evolveum.midpoint.model.lens.projector.InboundProcessor.processInbound=Process inbound (Model)
 operation.com.evolveum.midpoint.model.lens.projector.Projector.project=Project (Model)
 operation.com.evolveum.midpoint.model.lens.projector.ReconciliationProcessor.processReconciliation=Process reconciliation (Model)
+operation.com.evolveum.midpoint.model.sync.SynchronizeAccountResultHandler.handle=Synchronize account result handler, handle (Model)
 operation.com.evolveum.midpoint.model.synchronizer.InboundProcessor.processInbound=Process inbound (Model)
 operation.com.evolveum.midpoint.model.synchronizer.ReconciliationProcessor.processReconciliation=Process reconciliation (Model)
 operation.com.evolveum.midpoint.model.synchronizer.UserSynchronizer.checkAccountContextReconciliation=Check account context reconciliation (Model)
@@ -337,6 +340,9 @@ operation.com.evolveum.midpoint.web.page.admin.home.PageMyPasswords.loadAccount=
 operation.com.evolveum.midpoint.web.page.admin.home.PageMyPasswords.loadUser=Load user (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageMyPasswords.loadUserWithAccounts=Load user with accounts (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageMyPasswords.savePassword=Save password (Gui)
+operation.com.evolveum.midpoint.web.page.admin.reports.PageReport.saveReport=Save report (Gui)
+operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.loadReport=Load report (Gui)
+operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.runReport=Run report (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageAdminResources.loadResource=Load resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResource.importFromResource=Import from resource
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResourceEdit.saveResource=Save resource (Gui)
@@ -347,6 +353,8 @@ operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.syncStatu
 operation.com.evolveum.midpoint.web.page.admin.resources.PageResources.testResource=Test resource (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.content.PageAccount.saveAccount=Save account (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.content.PageContentAccounts.changeOwner=Change owner (gui)
+operation.com.evolveum.midpoint.web.page.admin.resources.content.PageContentAccounts.createUserFromAccount=Create user from account (Gui)
+operation.com.evolveum.midpoint.web.page.admin.resources.content.dto.AccountContentDataProvider.loadAccounts=Load accounts (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.dto.ResourceDtoProvider.countResources=Count resources (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.dto.ResourceDtoProvider.listResources=List resources (Gui)
 operation.com.evolveum.midpoint.web.page.admin.roles.PageRole.loadRole=Load role (Gui)
