styles fix for internal/accounts

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAccounts.properties
@@ -36,3 +36,4 @@ PageAccounts.accounts.synchronizationSituation=Situation
 PageAccounts.accounts.synchronizationTimestamp=Timestamp
 PageAccounts.accounts.description=Description
 PageAccounts.exportException=Error occurred during export, reason {0}
+PageAccounts.button.clearExportFolder=Clear export folder
