Correctly serializing items with names different from Java bean names (e.g. clazz vs. class).

--- a/infra/prism/src/test/resources/common/yaml/user-jack.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack.yaml
@@ -66,3 +66,4 @@ user:
         path: "declare namespace c='http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd'; c:name"
         value:
         - "captain"
+  special: "got it!"
