--- a/infra/prism/src/test/resources/common/yaml/user-jack-adhoc.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack-adhoc.yaml
@@ -53,3 +53,4 @@ user:
         - "captain"
   - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1113"
     type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
+  special: "got it!"
