--- a/infra/prism/src/test/resources/common/yaml/user-jack-object.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack-object.yaml
@@ -65,3 +65,4 @@ object:
         - "captain"
   - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1113"
     type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
+  special: "got it!"
