minor improvements in localization

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
@@ -36,5 +36,5 @@ PageAbout.repoDiag.additionalDetails.name=Name
 PageAbout.repoDiag.additionalDetails.value=Value
 PageAbout.button.testRepository=Repository self test
 PageAbout.button.testProvisioning=Provisioning self test
-PageAbout.allRightsReserved=&copy;2014 Evolveum. All Rights Reserved.
+PageAbout.allRightsReserved=&copy;2014 Evolveum.
 PageAbout.message.couldntObtainJvmParams=Couldn't obtain JVM parameters from JMX.
