--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -512,3 +512,5 @@ operation.com.evolveum.midpoint.web.page.admin.reports.PageReport.saveReport=Sav
 operation.com.evolveum.midpoint.web.page.admin.reports.PageReports.loadReport=Load report (Gui)
 operation.com.evolveum.midpoint.web.page.admin.resources.content.dto.AccountContentDataProvider.loadAccounts=Load accounts (Gui)
 operation.com.evolveum.midpoint.model.controller.ModelController.searchObjects=Search objects (Model)
+operation.com.evolveum.midpoint.model.impl.controller.ModelDiagController.repositorySelfTest.user=Repository self test, user (Model)
+operation.com.evolveum.midpoint.common.crypto.CryptoUtil.securitySelfTest=Security self test
