--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageAbout_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageAbout_sk_SK.utf8.properties
@@ -1,5 +1,5 @@
 #Fri Jan 10 12:27:06 CET 2014
-PageAbout.allRightsReserved=&copy;2014 Evolveum. All Rights Reserved.
+PageAbout.allRightsReserved=&copy;2014 Evolveum.
 PageAbout.button.testProvisioning=Provisioning self test
 PageAbout.button.testRepository=Repository self test
 PageAbout.midPointRevision=${describe}
