report configuration html/css fixes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -14,3 +14,5 @@
 # limitations under the License.
 #
 page.title=Report configuration
+PageReport.jasperTemplate=Jasper template
+PageReport.jasperTemplateStyle=Jasper template style
