bulk actions page started.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageBulkUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageBulkUsers.properties
@@ -15,3 +15,5 @@
 #
 page.title=User bulk actions
 PageBulkUsers.button.start=Start
+PageBulkAction.async=Asynchronous
+PageBulkAction.options=Options
