Attempting to fix Prism-based SOAP Web Service. (Introducing difference between compile-time and run-time JAX-WS/XML catalogs.)

--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -48,6 +48,10 @@
             <version>${jaxb-xjc.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
