Fixing model-client-sample-dotnet.

--- a/samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/App.config
+++ b/samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/App.config
@@ -8,15 +8,27 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-              <binding name="ModelWebServiceServiceSoapBinding">
-              </binding>
+                <binding name="modelBinding" maxReceivedMessageSize="20000000" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost.:8080/midpoint/model/model-1"
-                binding="basicHttpBinding" bindingConfiguration="ModelWebServiceServiceSoapBinding"
-                contract="midpointModelService.modelPortType" name="ModelWebServicePort">
-            </endpoint>
+            <endpoint address="http://localhost.:8080/midpoint/model/model-3"
+                binding="basicHttpBinding" bindingConfiguration="modelBinding"
+                contract="midpointModelService.modelPortType" name="modelPort" />
         </client>
     </system.serviceModel>
+    <system.diagnostics>
+        <trace autoflush="true" />
+        <sources>
+            <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing"
+              propagateActivity="true">
+              <listeners>
+                <add name="sdt"
+                    type="System.Diagnostics.XmlWriterTraceListener"
+                    initializeData="SdrConfigExample.e2e"  />
+              </listeners>
+            </source>
+        </sources>
+    </system.diagnostics>
 </configuration>
