MID-1780 partial fix, complete query implemented, but as it may be slow, it is disabled at the moment. Fixed few small issues when moving org. unit as well.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser_en_US.utf8.properties
@@ -3,4 +3,4 @@ OrgUnitBrowser.cancel=Cancel
 OrgUnitBrowser.createRoot=Make it root
 OrgUnitBrowser.message.queryError=Error occurred during translation search query to filter.
 OrgUnitBrowser.search=Search
-OrgUnitBrowser.title=Choose new org. unit parent
+OrgUnitBrowser.title=Choose new parent for org. unit
