--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-OrgUnitBrowser.title=Choose new org. unit parent
+OrgUnitBrowser.title=Choose new parent for org. unit
 OrgUnitBrowser.search=Search
 OrgUnitBrowser.cancel=Cancel
 OrgUnitBrowser.createRoot=Make it root
