--- a/samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/App.config
+++ b/samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/App.config
@@ -6,9 +6,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <system.serviceModel>
-        <bindings>
+        <bindings>(a
             <basicHttpBinding>
-                <binding name="modelBinding" maxReceivedMessageSize="20000000" />
+                <binding name="modelBinding" maxReceivedMessageSize="200000000" />
             </basicHttpBinding>
         </bindings>
         <client>
