--- a/samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/App.config
+++ b/samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/App.config
@@ -6,7 +6,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <system.serviceModel>
-        <bindings>(a
+        <bindings>
             <basicHttpBinding>
                 <binding name="modelBinding" maxReceivedMessageSize="200000000" />
             </basicHttpBinding>
