--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -19,6 +19,7 @@ pageTaskEdit.button.back=Back
 pageTaskEdit.button.save=Save
 pageTaskEdit.button.edit=Edit
 pageTaskEdit.button.resume=Resume
+pageTaskEdit.button.runNow=Run now
 pageTaskEdit.button.suspend=Suspend
 
 pageTaskEdit.basic=Basic
