Bulk actions task sample + minor enhancements.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -64,6 +64,7 @@ pageTasks.runsContinually=runs continually
 
 pageTasks.category.AllCategories=All categories
 pageTasks.category.Demo=Demo
+pageTasks.category.BulkActions=Bulk actions
 pageTasks.category.ImportFromFile=Import from file
 pageTasks.category.ImportingAccounts=Importing accounts
 pageTasks.category.LiveSynchronization=Live synchronization
