--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
@@ -38,6 +38,7 @@ pageTask.category.Demo=Demo
 pageTask.category.ImportFromFile=Import from file
 pageTask.category.ImportingAccounts=Importing accounts
 pageTask.category.LiveSynchronization=Live synchronization
+pageTask.category.BulkActions=Bulk actions
 pageTask.category.Reconciliation=Reconciliation
 pageTask.category.UserRecomputation=User recomputation
 pageTask.category.Workflow=Workflow
