fix for MID-1924

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount.properties
@@ -19,3 +19,4 @@ pageAccount.message.cantEditAccount=Couldn't load account for editing.
 pageAccount.description=Account on resource
 pageAccount.button.save=Save
 pageAccount.button.back=Back
+pageAccount.message.cantEditProtectedAccount=This is protected account, it can't be modified.
