--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.properties
@@ -18,3 +18,4 @@ CheckTableHeader.label.error=Error
 CheckTableHeader.showMore=Show more
 CheckTableHeader.triggerPlanned=Trigger planned on {0}.
 CheckTableHeader.triggerUnknownTime=Trigger without time planned.
+CheckTableHeader.protected=Protected
