simple user status icons in user list.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -56,6 +56,9 @@ Boolean.NULL=Undefined
 Boolean.TRUE=True
 Boolean.FALSE=False
 
+User.superuser=Superuser
+User.disabled=Disabled
+
 OriginType.SYNC_ACTION=Sync action
 OriginType.RECONCILIATION=Reconciliation
 OriginType.INBOUND=Inbound
