updated report editor, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -14,5 +14,7 @@
 # limitations under the License.
 #
 page.title=Report configuration
+PageReport.basic=Basic configuration
 PageReport.jasperTemplate=Jasper template
 PageReport.jasperTemplateStyle=Jasper template style
+PageReport.fullXml=Full xml
