Fixis on report page - model is updated and validated when working with various tabs.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -17,4 +17,5 @@ page.title=Report configuration
 PageReport.basic=Basic configuration
 PageReport.jasperTemplate=Jasper template
 PageReport.jasperTemplateStyle=Jasper template style
+PageReport.message.cantSaveEmpty=Can't save empty report.
 PageReport.fullXml=Full xml
