Fixed one more issue and improved error handling when working with reports.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -18,4 +18,5 @@ PageReport.basic=Basic configuration
 PageReport.jasperTemplate=Jasper template
 PageReport.jasperTemplateStyle=Jasper template style
 PageReport.message.cantSaveEmpty=Can't save empty report.
+PageReport.message.cantSerializeFromObjectToString=Can't serialize object to XML.
 PageReport.fullXml=Full xml
