fixes from wls testing

--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -553,5 +553,31 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>tomcat</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+
+	    <dependencies>
+		<dependency>
+                        <artifactId>jaxb-impl</artifactId>
+                        <groupId>com.sun.xml.bind</groupId>
+                </dependency>
+                <dependency>
+                        <artifactId>jaxb-api</artifactId>
+                        <groupId>javax.xml.bind</groupId>
+			<version>${jaxb.version}</version>
+                </dependency>
+                <dependency>
+                        <artifactId>jaxb-core</artifactId>
+                        <groupId>com.sun.xml.bind</groupId>
+			<version>${jaxb.version}</version>
+		</dependency>
+	    </dependencies>
+
+        </profile>
+
     </profiles>
 </project>
