--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
@@ -32,13 +32,21 @@ pageDebugList.menu.deleteAllType=Delete all of selected type
 pageDebugList.button.clear=Clear
 pageDebugList.button.search=Search
 pageDebugList.message.queryException=Couldn't create query for name substring, reason: {0}
+pageDebugList.dialog.title.deleteAll=Delete All Objects
 pageDebugList.dialog.title.confirmDelete=Confirm delete
 pageDebugList.message.nothingSelected=No object has been selected.
 pageDebugList.message.deleteAllType=Do you really want to delete all objects of type "{0}"?
 pageDebugList.message.deleteObjectConfirm=Do you really want to delete "{0}"?
 pageDebugList.message.deleteSelectedConfirm=Do you really want to delete {0} objects?
 pageDebugList.message.createFileException=Couldn't create file for download.
-pageDebugList.message.countSearchProblem=Couldn't perform search operation on users/shadows
-pageDebugList.message.singleDeleteProblemUser=Couldn't delete user
-pageDebugList.message.singleDeleteProblemShadow=Couldn't delete shadow
+pageDebugList.message.countSearchProblem=Couldn't perform search operation on users/shadows/org. units
+pageDebugList.message.singleUserDeleteProblem=Couldn't delete user
+pageDebugList.message.singleOrgDeleteProblem=Couldn't delete org. unit
+pageDebugList.message.singleShadowDeleteProblem=Couldn't delete shadow
 pageDebugList.message.laxativeProblem=Drop all identities operation has not performed successfully
+pageDebugList.label.usersDelete=Users to delete: {0} (User 'Administrator' will not be deleted)
+pageDebugList.label.orgUnitsDelete=Org. units to delete: {0}
+pageDebugList.label.accountShadowsDelete=Account shadows to delete: {0}
+pageDebugList.label.orgShadowsDelete=Org. unit shadows to delete: {0}
+pageDebugList.label.roleShadowsDelete=Role shadows to delete: {0}
+pageDebugList.label.totalToDelete=Total objects to delete: {0}
