support for reconcile option in GUI and model..

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -45,6 +45,7 @@ pageUser.button.label.role=Role
 pageUser.button.label.resources=Resource
 pageUser.button.label.assign=Assign
 pageUser.button.label.force=Force
+pageUser.button.label.reconcile=Reconcile
 
 pageUser.message.cantCreateUser=Create user failed
 pageUser.message.cantUpdateUser=Update user failed
