--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAccounts.properties
@@ -43,6 +43,7 @@ PageAccounts.exportException=Error occurred during export, reason {0}
 PageAccounts.button.clearExportFolder=Clear export folder
 PageAccounts.exportFileDoesntExist=Couldn't create file {0}
 PageAccounts.message.validationError=Searched objectClass value: '{0}' is not valid. Please provide valid objectClass value.
+pageAccounts.message.resourceNotSelected=Resource not selected. Please select a resource to display it's shadows.
 ShadowKindType.ACCOUNT=Account
 ShadowKindType.ENTITLEMENT=Entitlement
 ShadowKindType.GENERIC=Generic
