--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -48,8 +48,9 @@
         <cxf.version>3.0.1.e1</cxf.version>
         <cxf-xjc.version>3.0.1</cxf-xjc.version>
         <dbunit.version>2.4.7</dbunit.version>
-        <jaxb.version>2.2.7</jaxb.version>
-        <jaxb-xjc.version>2.2.7</jaxb-xjc.version>
+        <jaxb-api.version>2.2.9</jaxb-api.version>
+        <jaxb.version>2.2.10-b140310.1920</jaxb.version>
+        <jaxb-xjc.version>2.2.10-b140310.1920</jaxb-xjc.version>
         <junit.version>4.8.2</junit.version>
         <opendj.version>2.4.3</opendj.version>
         <mockito.version>1.8.5</mockito.version>
@@ -179,8 +180,18 @@
                 <version>4.1.10</version>
             </dependency>
             <dependency>
+                    <artifactId>jaxb-api</artifactId>
+                    <groupId>javax.xml.bind</groupId>
+                    <version>${jaxb-api.version}</version>
+            </dependency>          
+            <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-core</artifactId>
                 <version>${jaxb.version}</version>
             </dependency>
             <dependency>
