Adding mailDomain component to Org. Unit editor.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -199,6 +199,7 @@ OrgType.identifier=Identifier
 OrgType.costCenter=Cost center
 OrgType.locality=Locality
 OrgType.orgType=Org. type
+OrgType.mailDomain=Mail Domain
 FocusType.activation=Activation
 
 UserType.fullName=Full name
