--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -194,6 +194,7 @@ ObjectType.name=Name
 ObjectType.description=Description
 ObjectType.parentOrgRef=Parent org. units
 OrgType.requestable=Requestable
+OrgType.tenant=Tenant
 OrgType.displayName=Display name
 OrgType.identifier=Identifier
 OrgType.costCenter=Cost center
