--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TextDetailsPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TextDetailsPanel.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2010-2013 Evolveum
+# Copyright (c) 2010-2014 Evolveum
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,6 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-prismValuePanel.add=Add
-prismValuePanel.delete=Delete
-prismValuePanel.message.association.attributes=Attributes:
+
+TextDetailsPanel.title=Association Details
