MID-2019 + MID-2016 implementation (displayName and identifiers in Role editors)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -22,8 +22,10 @@ PageRoleEditor.subtitle.editingRole=role '{0}'
 PageRoleEditor.title.inducements=Inducements
 PageRoleEditor.title.assignments=Assignments
 PageRoleEditor.label.name=Name
+PageRoleEditor.label.displayName=Display name
 PageRoleEditor.label.description=Description
 PageRoleEditor.label.type=Type
 PageRoleEditor.label.requestable=Requestable
+PageRoleEditor.label.identifier=Identifier
 
 
